--- a/src/app/domains/main/components/header/header.component.html
+++ b/src/app/domains/main/components/header/header.component.html
@@ -2,7 +2,7 @@
 <div class="Header  row">
     <div class="row">
 
-        <div class="col-lg-6 containerText">
+        <div class="col-lg-5 containerText">
 
             <div class="row containerTextRow">
 
@@ -27,15 +27,15 @@
                 </div>
 
                 <div class="row headerBtn">
-                    <div class="col-lg-4">
+                    <div class="col-xl-4">
                         <button (click)="scrollToSection('aboutMe')" class="btn btn-primary HeaderButton">Sobre Mi <i
                                 class="bi bi-person"></i></button>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-xl-4">
                         <button (click)="scrollToSection('contactMe')" class="btn btn-primary HeaderButton">Contáctame
                             <i class="bi bi-envelope"></i></button>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-xl-4">
                         <button (click)="downloadPDF()" class="btn btn-primary HeaderButton">Descarga CV <i
                                 class="bi bi-file-earmark-arrow-down"></i></button>
                     </div>
@@ -45,8 +45,7 @@
                     <p class="d-flex justify-content-center gap-5">
                         <a href="https://www.linkedin.com/in/juancamilosalazarserna/" target="_blank"><i class="bi bi-linkedin"></i></a>
                         <a href="https://github.com/Jcss1462" target="_blank"><i class="bi bi-github"></i></a>
-                        <a href="https://www.instagram.com/jcss1462games/" target="_blank"><i class="bi bi-instagram"></i></a>
-                    
+                        <!--<a href="https://www.instagram.com/jcss1462games/" target="_blank"><i class="bi bi-instagram"></i></a>-->      
                     </p>
                 </div>
 
@@ -54,9 +53,9 @@
 
         </div>
 
-        <div class="col-lg-6 containerImage">
+        <div class="col-lg-7 containerImage">
 
-            <img src="assets/buzzHand.jpg" alt="coverImage">
+            <img src="assets/buzzHandViñeta.jpg" alt="coverImage">
 
         </div>
 
