Se hace ajuste tipografico, se modifica la imagen del header yse documentan los proyectos de 3D

--- a/src/app/domains/main/components/header/header.component.html
+++ b/src/app/domains/main/components/header/header.component.html
@@ -2,7 +2,7 @@
 <div class="Header  row">
     <div class="row">
 
-        <div class="col-lg-5 containerText">
+        <div class="col-lg-6 containerText">
 
             <div class="row containerTextRow">
 
@@ -53,9 +53,9 @@
 
         </div>
 
-        <div class="col-lg-7 containerImage">
+        <div class="col-lg-6 containerImage">
 
-            <img src="assets/buzzHandViñeta.jpg" alt="coverImage">
+            <img src="assets/buzzHandVineta.jpg" alt="coverImage">
 
         </div>
 
