--- a/src/app/domains/main/components/stack/stack.component.html
+++ b/src/app/domains/main/components/stack/stack.component.html
@@ -8,7 +8,7 @@
 
     <div class="row stackContainer">
 
-    @for (stack of stacks; track stack) {
+    @for (stack of stackData(); track stack) {
         <div class="row stackCategory">
            <b>{{stack.categoria}}</b> 
         </div>
