Se añade nuevamente el instagram a las redes

--- a/src/app/domains/main/components/header/header.component.html
+++ b/src/app/domains/main/components/header/header.component.html
@@ -47,7 +47,7 @@
                     <p class="d-flex justify-content-center gap-5">
                         <a href="https://www.linkedin.com/in/juancamilosalazarserna/" target="_blank"><i class="bi bi-linkedin"></i></a>
                         <a href="https://github.com/Jcss1462" target="_blank"><i class="bi bi-github"></i></a>
-                        <!--<a href="https://www.instagram.com/jcss1462games/" target="_blank"><i class="bi bi-instagram"></i></a>-->      
+                        <a href="https://www.instagram.com/jcss1462games1/" target="_blank"><i class="bi bi-instagram"></i></a>      
                     </p>
                 </div>
 
