Se oculta el contenido del formulario del send email

--- a/src/app/domains/main/components/contact-me/contact-me.component.html
+++ b/src/app/domains/main/components/contact-me/contact-me.component.html
@@ -1,6 +1,6 @@
 <div class="contactMe row">
 
-    <div class="col-sm-6">
+    <div class="col-sm-12">
 
         <div class="contact-section">
             <div class="contact-container">
@@ -13,7 +13,7 @@
     </div>
 
 
-    <div class="col-sm-6 form-floating">
+    <!-- <div class="col-sm-6 form-floating">
 
         <form class="formContainer" [formGroup]="contactForm" (ngSubmit)="submitForm()">
             <div>
@@ -57,7 +57,7 @@
             <button [disabled]="!contactForm.valid" type="submit" class="btn btn-primary"><b>Enviar <i class="bi bi-send"></i></b></button>
         </form>
 
-    </div>
+    </div> -->
 
 </div>
 
