--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'ngx-toastr/toastr';
 
-.toast-container{
+.toast-container {
     position: fixed;
 }
 
-*{
+* {
+    /*tipografia*/
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
 
-/* Works on Firefox */
-* {
-    scrollbar-width: none;
-    scrollbar-color: rgb(0, 119, 255) rgb(255, 255, 255);
-  }
-  
+html,
+body {
+    /*scrolbar*/
+    overflow-y: auto;
+    overflow-x: hidden;
+    scrollbar-width: thin;
+    scrollbar-color: #0d6efd #111;
+    box-sizing: border-box;
+}
+
+
+/******Configuraciones de scrolll***********************************/
+::-webkit-scrollbar-track {
+    background: #111;
+    /* un poco más claro que el negro puro para distinguir */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #0d6efd;
+    border-radius: 10px;
+    border: 2px solid #111;
+    /* efecto de borde para separarlo del track */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #0b5ed7;
+    /* un tono más oscuro al hacer hover */
+}
