Actualizacion de mensaje en el componente about-me

--- a/src/app/domains/main/components/about-me/about-me.component.html
+++ b/src/app/domains/main/components/about-me/about-me.component.html
@@ -17,8 +17,9 @@
                     <p>
                         <b>Sobre Mi</b>
                         <br>
-                        Soy un desarrollador FullStack y Multimedia, actualmente especializado en el desarrollo web
-                        y de software personalizado.
+                        Soy desarrollador FullStack y multimedia. Me gusta crear soluciones que combinen funcionalidad, 
+                        diseño y utilidad real para las personas; disfruto aprender, resolver problemas y dar vida a ideas
+                        a través del código.
                     </p>
                 </div>
             </div>
